--- a/test/integration/targets/vmware_host_dns/tasks/main.yml
+++ b/test/integration/targets/vmware_host_dns/tasks/main.yml
@@ -4,6 +4,8 @@
 
 - import_role:
     name: prepare_vmware_tests
+      vars:
+        setup_attach_host: true
 
 - name: Gather DNS facts about ESXi Host
   vmware_host_dns_info:
