--- a/test/integration/targets/prepare_vmware_tests/tasks/init_vcsim.yml
+++ b/test/integration/targets/prepare_vmware_tests/tasks/init_vcsim.yml
@@ -7,38 +7,28 @@
   uri:
     url: http://{{ vcsim }}:5000/killall
 
-- name: start vcsim (all dressed)
-  uri:
-    url: http://{{ vcsim }}:5000/spawn?cluster=1&folder=1&ds=2
-  register: vcsim_instance
-  when: setup_esxi_instance is not defined
+- when: setup_esxi_instance is not defined
+  block:
+  - name: start vcsim (all dressed)
+    uri:
+      url: http://{{ vcsim }}:5000/spawn?cluster=1&folder=1&ds=2
+    register: vcsim_instance
+    when: setup_esxi_instance is not defined
+  - name: set state to poweroff on all VMs
+    vmware_guest:
+      name: "{{ item.name }}"
+      state: poweredoff
+    with_items: "{{ virtual_machines + virtual_machines_in_cluster }}"
+    register: poweroff_d1_c1_f0
+    when: setup_esxi_instance is not defined
 
-- name: start vcsim (ESXi only)
-  uri:
-    url: http://{{ vcsim }}:5000/spawn?esx=1
-  register: vcsim_instance
-  when: setup_esxi_instance is defined
-
-# - name: get a list of Hosts from vcsim
-#   uri:
-#     url: http://{{ vcsim }}:5000/govc_find?filter=H
-#   register: vcsim_host_list
-
-# - name: get a list of Hosts from vcsim
-#   uri:
-#     url: http://{{ vcsim }}:5000/govc_find?filter=F
-#   register: vcsim_host_folder
-# - debug: var=vcsim_host_folder
-
-- set_fact:
-    vcenter_hostname: "{{ vcsim }}"
-    vcenter_username: "user"
-    vcenter_password: "pass"
+- when: setup_esxi_instance is defined
+  block:
+  - name: start vcsim (ESXi only)
+    uri:
+      url: http://{{ vcsim }}:5000/spawn?esx=1
+    register: vcsim_instance
+  - set_fact:
+      esxi1: "{{ vcsim }}"
 
 
-- name: set state to poweroff on all VMs
-  vmware_guest:
-    name: "{{ item.name }}"
-    state: poweredoff
-  with_items: "{{ virtual_machines + virtual_machines_in_cluster }}"
-  register: poweroff_d1_c1_f0
