--- a/test/integration/targets/vmware_object_rename/tasks/vm_rename.yml
+++ b/test/integration/targets/vmware_object_rename/tasks/vm_rename.yml
@@ -4,52 +4,62 @@
 
 - when: vcsim is not defined
   block:
-    - name: Get VM Facts
-      vmware_vm_info:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: False
-      register: vm_info
+    - import_role:
+        name: prepare_vmware_tests
+      vars:
+        setup_datacenter: true
 
-    - set_fact: vm_name="{{ vm_info['virtual_machines'][0]['guest_name'] }}"
-    
-    - set_fact: new_vm_name="vm_8042"
-    
-    - name: Rename VM with name {{ vm_name }} to {{ new_vm_name }}
+    - name: Rename datastore dc1
       vmware_object_rename:
         hostname: '{{ vcenter_hostname }}'
         username: '{{ vcenter_username }}'
         password: '{{ vcenter_password }}'
-        validate_certs: False
-        object_type: VM
-        object_name: "{{ vm_name }}"
-        new_name: "{{ new_vm_name }}"
-      register: vm_rename
-    
+        object_type: Datacenter
+        object_name: "{{ dc1 }}"
+        new_name: "datacenter_0001"
+      register: rename_result
+
+    - debug: var=rename_result
+
     - name: Check if VM rename status
       assert:
         that:
-          - vm_rename.changed
-          - vm_rename.rename_status.current_name == new_vm_name
-          - vm_rename.rename_status.desired_name == new_vm_name
-          - vm_rename.rename_status.previous_name == vm_name
+          - rename_result.changed
+          - rename_result.rename_status.current_name == "datacenter_0001"
+          - rename_result.rename_status.desired_name == "datacenter_0001"
+          - rename_result.rename_status.previous_name == "{{ dc1 }}"
 
-    - name: Revert rename VM with name {{ new_vm_name }} to {{ vm_name }}
+    - name: Rename datastore dc1 (again)
       vmware_object_rename:
         hostname: '{{ vcenter_hostname }}'
         username: '{{ vcenter_username }}'
         password: '{{ vcenter_password }}'
-        validate_certs: False
-        object_type: VM
-        object_name: "{{ new_vm_name }}"
-        new_name: "{{ vm_name }}"
-      register: vm_rename
-    
-    - name: Check if VM renaming works again
+        object_type: Datacenter
+        object_name: "{{ dc1 }}"
+        new_name: "datacenter_0001"
+      register: rename_result
+
+    - debug: var=rename_result
+
+    - name: Check if VM rename status is changed==false
       assert:
         that:
-          - vm_rename.changed
-          - vm_rename.rename_status.current_name == vm_name
-          - vm_rename.rename_status.desired_name == vm_name
-          - vm_rename.rename_status.previous_name == new_vm_name
+          - rename_result.changed == false
+
+    - name: Revert the renaming
+      vmware_object_rename:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        object_type: Datacenter
+        object_name: "new_datacenter"
+        new_name: "{{ dc1 }}"
+      register: rename_result
+
+    - debug: var=rename_result
+
+    - name: Check if VM rename status
+      assert:
+        that:
+          - rename_result.changed == true
+          - rename_result.rename_status.current_name == "{{ dc1 }}"
